--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 				<h2>Welcome to My Portfolio</h2>
 
 				<span class="image main">
-					<a href="images/cover_pic1.jpg" target="_blank">
-						<img src="images/cover_pic1.jpg" alt="" />
+					<a href="images/cover_pic1.webp" target="_blank">
+						<img src="images/cover_pic1.webp" alt="" />
 					</a>
 				</span>
 				<p style="text-align: justify;">
@@ -160,7 +160,7 @@
 					</p>
 					<a href="#single-board-computer-projects" class="deewan-custom-link">
 						<span class="image main">
-							<img src="images/cover_pic_rpi.jpg" alt="Single-Board Computer Projects" />
+							<img src="images/cover_pic_rpi.webp" alt="Single-Board Computer Projects" />
 						</span>
 					</a>
 					<!-- View All project and Back Button -->
@@ -235,7 +235,7 @@
 				<h2>About Me</h2>
 				<span class="image main"
 					style="display: inline-block; border-radius: 50%; background-color: #f0f0f0; padding: 7px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-					<img src="images/deewan.jpg" alt="Rounded Profile Picture"
+					<img src="images/deewan.webp" alt="Rounded Profile Picture"
 						style="border-radius: 50%; display: block;" />
 				</span>
 				<!-- <div class="actions" style="text-align: center;">
@@ -550,7 +550,7 @@
 					</h3>
 					<a href="#Obstacle Detection for Visually Impaired People Section" class="deewan-custom-link">
 						<span class="image main">
-							<img src="images/24.jpg" alt="Embedded Systems Projects" />
+							<img src="images/24.webp" alt="Embedded Systems Projects" />
 						</span>
 					</a>
 					<p style="text-align: justify;">These projects involve the development of embedded systems, which
@@ -582,7 +582,7 @@
 					<a href="#IOT Based Home Automation System Using Andriod Application (Blynk)"
 						class="deewan-custom-link">
 						<span class="image main">
-							<img src="images/24.jpg" alt="Embedded Systems Projects" />
+							<img src="images/24.webp" alt="Embedded Systems Projects" />
 						</span>
 					</a>
 					<p style="text-align: justify;">These projects involve the development of embedded systems, which
@@ -618,7 +618,7 @@
 					</h3>
 					<a href="#Smart Classroom & Timetable Management" class="deewan-custom-link">
 						<span class="image main">
-							<img src="images/24.jpg" alt="Embedded Systems Projects" />
+							<img src="images/24.webp" alt="Embedded Systems Projects" />
 						</span>
 					</a>
 					<p style="text-align: justify;">
@@ -655,7 +655,7 @@
 					<a href="#Intelligent Load Shedding Time Management System with Real-Time Load Consumption Estimation, Automated Power Distribution, and Optimized Energy Efficiency"
 						class="deewan-custom-link">
 						<span class="image main">
-							<img src="images/24.jpg" alt="Embedded Systems Projects" />
+							<img src="images/24.webp" alt="Embedded Systems Projects" />
 						</span>
 					</a>
 					<p style="text-align: justify;">
@@ -691,7 +691,7 @@
 					<a href="#Hardware-Based Two-Factor Authentication (2FA) Home Security System Using Password and SMS-Based One Time Password (OTP) for Enhanced Protection and Seamless User Experience"
 						class="deewan-custom-link">
 						<span class="image main">
-							<img src="images/24.jpg" alt="Embedded Systems Projects" />
+							<img src="images/24.webp" alt="Embedded Systems Projects" />
 						</span>
 					</a>
 					<p style="text-align: justify;">
@@ -726,7 +726,7 @@
 					<a href="#An Intelligent Electricity Theft Detection System with Real-Time Monitoring and GSM-Based Notification for Enhanced Energy Security "
 						class="deewan-custom-link">
 						<span class="image main">
-							<img src="images/24.jpg" alt="Embedded Systems Projects" />
+							<img src="images/24.webp" alt="Embedded Systems Projects" />
 						</span>
 					</a>
 					<p style="text-align: justify;">
@@ -805,7 +805,7 @@
 					</h3>
 					<a href="#Rice Disease Detection Section" class="deewan-custom-link">
 						<span class="image main">
-							<img src="images/24.jpg" alt="Embedded Systems Projects" />
+							<img src="images/24.webp" alt="Embedded Systems Projects" />
 						</span>
 					</a>
 					<p style="text-align: justify;">This project utilizes NFC technology with the PN532 module to create
@@ -835,7 +835,7 @@
 					</h3>
 					<a href="#Pothole Detection Section" class="deewan-custom-link">
 						<span class="image main">
-							<img src="images/24.jpg" alt="Embedded Systems Projects" />
+							<img src="images/24.webp" alt="Embedded Systems Projects" />
 						</span>
 					</a>
 					<p style="text-align: justify;">This project utilizes NFC technology with the PN532 module to create
@@ -879,7 +879,7 @@
 					</h3>
 					<a href="#Pothole Detection Section" class="deewan-custom-link">
 						<span class="image main">
-							<img src="images/20.jpg" alt="Embedded Systems Projects" />
+							<img src="images/20.webp" alt="Embedded Systems Projects" />
 						</span>
 					</a>
 					<p style="text-align: justify;">This project utilizes Machine Learning to detect potholes in
@@ -2580,8 +2580,8 @@
 					<p style="text-align: center;">
 						<strong>System Overview</strong>
 						<span class="image main" style="display: block; margin-top: 0;">
-							<a href="images/embedded/4/overview-thumb.jpg" target="_blank">
-								<img src="images/embedded/4/overview-thumb.jpg" alt="System Overview" />
+							<a href="images/embedded/4/overview-thumb.webp" target="_blank">
+								<img src="images/embedded/4/overview-thumb.webp" alt="System Overview" />
 							</a>
 							<br>
 							<strong>Detailed Overview</strong>
@@ -2939,8 +2939,8 @@ def fetch_and_process_attendance():
 							</a>
 							<br>
 							<strong>Front View of the Hardware Development (Complete Assembly)</strong>
-							<a href="/images/embedded/4/front-view-pic-developement.jpg" target="_blank">
-								<img src="/images/embedded/4/front-view-pic-developement.jpg"
+							<a href="/images/embedded/4/front-view-pic-developement.webp" target="_blank">
+								<img src="/images/embedded/4/front-view-pic-developement.webp"
 									alt="front view of the development" />
 							</a>
 
@@ -3172,8 +3172,8 @@ def fetch_and_process_attendance():
 					<p style="text-align: center;">
 						<strong>Circuit Diagram</strong>
 						<span class="image main" style="display: block; margin-top: 0;">
-							<a href="images/embedded/4/circuit-diagram.jpg" target="_blank">
-								<img src="images/embedded/4/circuit-diagram.jpg" alt="Circuit Diagram" />
+							<a href="images/embedded/4/circuit-diagram.webp" target="_blank">
+								<img src="images/embedded/4/circuit-diagram.webp" alt="Circuit Diagram" />
 							</a>
 						</span>
 						<strong>Code Snippet</strong>
